@@ -2,6 +2,7 @@
 # This file is updated with Maddlog
 
 * Wed Nov  7 2012 Sjoerd Mullender <sjoerd@acm.org>
+- msqldump: Implmented an option (--table/-t) to dump a single table.
 - Changed msqdump's trace option to be in line with mclient.  In both
   cases, the long option is --Xdebug and the short option is -X.
 
